crates/polaris_tools/tests/compile_fail/tool_unknown_option.rs
use polaris_tools::tool;

#[tool(unknown = true)]
/// An unsupported `#[tool(...)]` option should be rejected.
async fn bad(name: String) -> Result<String, String> {
    Ok(name)
}

fn main() {}
